force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/ssot__LoyaltyProgramCurrency__dlm.object-meta.xml
<CustomObject>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <description>Mediums of exchange that are allowed within a Loyalty Program such as Points and Miles.</description>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Loyalty Program Setup</referenceEntityGroup>
        <referenceEntityName>LoyaltyProgramCurrency</referenceEntityName>
        <referenceEntitySubjectArea>Loyalty Program</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>