force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__CurrencyTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CurrencyTypeId__c</fullName>
    <label>Currency Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CurrencyTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>