force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimary__c</fullName>
    <label>Is Primary</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimary</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>