force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__rel_1697761182338_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761182338_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgramCurrency_LoyaltyTierGr_rel</label>
    <referenceTo>ssot__LoyaltyTierGroup__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgramCurrency_LoyaltyTierGr_rel</relationshipLabel>
    <relationshipName>rel_1697761182338_end</relationshipName>
    <type>Lookup</type>
</CustomField>