force-app/main/default/objects/ssot__LoyaltyProgramCurrency__dlm/fields/ssot__rel_1697761184186_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761184186_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyProgram_Id_map_LoyaltyProgram_rel</label>
    <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
    <relationshipLabel>LoyaltyProgram_Id_map_LoyaltyProgram_rel</relationshipLabel>
    <relationshipName>rel_1697761184186_end</relationshipName>
    <type>Lookup</type>
</CustomField>